# sol-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_master.yml
api/: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/status/: mod.rs
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: frontend.js  globalStyle.styl
frontend/src/components/: Computer.vue  Group.vue  Header.vue  Supervision.vue
server/: Cargo.toml
server/src/: main.rs
webpage/: .gitignore  package-lock.json  package.json  webpack.config.js
webpage/src/: constants.js
webpage/src/components/: App.vue  Group.vue
