[package]
name = "sol-rs-api"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sol-rs-core = { path = "../core" }
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix_htpasswd = { git = "https://github.com/tbagrel1/actix_htpasswd", rev = "1123b1ba348b600c5075cbaa98a31f96ccbb1b08" }
flow_utils = { git = "https://github.com/tracipsas/flow_utils", rev = "3f317186e636c8995d55566071d5870ac8b48469" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[[bin]]
name = "sol-rs-api"
path = "src/main.rs"

