[package]
name = "backend"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix_htpasswd = { git = "https://github.com/tbagrel1/actix_htpasswd" }
flow_utils = { git = "https://github.com/tbagrel1/flow_utils" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
