[package]
name = "client"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
flow_utils = { git = "https://github.com/tbagrel1/flow_utils" }
toml = "0.5"
serde = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
percent-encoding = "2.1"
