[package]
name = "sol-rs-client"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sol-rs-core = { path = "../core" }
flow_utils = { git = "https://github.com/tracipsas/flow_utils", rev = "3f317186e636c8995d55566071d5870ac8b48469" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
percent-encoding = "2.1"

[[bin]]
name = "sol-rs-client"
path = "src/main.rs"

