[package]
name = "core"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_utils = { git = "https://github.com/tbagrel1/serde_utils" }
serde = "1.0"
