[package]
name = "sol-rs-core"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_utils = { git = "https://github.com/tracipsas/serde_utils", rev = "eb76e72e6b6527d32321e9cbb9f7a7307fe2ae11" }
serde = "1.0"

[lib]
name = "core"
path = "src/lib.rs"
